# LLM-Twin

./: Dockerfile  pyproject.toml
.zen/: config.yaml
code_snippets/: custom_odm_example.py  instructor_embedding_example.py  text_embedding_example.py  text_image_embeddings.py  users_table_orm.py
deployment/manifests/: digital_data_etl_maxime_labonne.yaml  digital_data_etl_paul_iusztin.yaml  training.yaml
llm_engineering/: settings.py
llm_engineering/application/utils/: misc.py
pipelines/: digital_data_etl.py  generate_datasets.py
scripts/etl/: crawl_links.py  get_or_create_user.py
scripts/generate_datasets/: create_prompts.py  generate_instruction_dataset.py  query_feature_store.py
services/: __init__.py  settings.py
services/application/crawlers/: base_selenium_crawler.py  custom_article.py  dispatcher.py
services/application/dataset/: gemini_rate_limiter.py  generation.py  output_parsers.py
services/application/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  embedding_data_handlers.py
services/application/preprocessing/operations/: __init__.py  chunking.py
services/application/utils/: __init__.py  split_user_name.py
services/domain/: __init__.py  chunks.py  cleaned_documents.py  documents.py  embedded_chunks.py  queries.py
services/domain/base/: nosql.py  vector.py
services/enums/: document_type.py
services/model/finetuning/: finetune.py
