[project]
name = "llm-twin"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmed Sherif",email = "as4349124@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "zenml (>=0.94.3,<0.95.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "transformers (>=5.8.0,<6.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
